--- a/index.html
+++ b/index.html
@@ -6,5 +6,11 @@
     <title>SHOPPING STORE</title>
     <link rel="stylesheet" href="./css/style.css" />
   </head>
-  <body></body>
+  <body>
+    <main>
+      <section id="products">s</section>
+    </main>
+
+    <script src="./app.js"></script>
+  </body>
 </html>
