--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
       <section id="products">s</section>
     </main>
 
-    <script src="./app.js"></script>
+    <script type="module" src="./app.js"></script>
   </body>
 </html>
