making class for products

--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
   </head>
   <body>
     <main>
-      <section id="products">s</section>
+      <section id="products"></section>
     </main>
-
-    <script type="module" src="./app.js"></script>
+    <script type="module" src="./app.js">
+ 
+    </script>
   </body>
 </html>
