--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
     <header><h1>OOP SHOPPING WEBSITE</h1></header>
     <main>
       <section id="products"></section>
+      <section id="cart">
+        <h3>cart</h3>
+      <section id="card-list">empty</section>
+      <section id="total-price">total price: <span>0</span></section>
+      </section>
     </main>
     <script type="module" src="./app.js">
  
