making create card and adding method for show the products

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <section id="products"></section>
       <section id="cart">
         <h3>cart</h3>
-      <section id="card-list">empty</section>
+      <section id="cart-list">empty</section>
       <section id="total-price">total price: <span>0</span></section>
       </section>
     </main>
