adding css style

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
-    <header><h1>OOP SHOPPING WEBSITE</h1></header>
+    <header><h1>OOP SHOPPING WEBSITE</h1><div class="line"></div><div class="line2"></div></header>
     <main>
       <section id="products"></section>
       <section id="cart">
