--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
-    <header><h1>OOP SHOPPING WEBSITE</h1><div class="line"></div><div class="line2"></div></header>
+    <header><h1>OOP SHOPPING WEBSITE (JUST FOR FUN)</h1><div class="line"></div><div class="line2"></div></header>
     <main>
       <section id="products"></section>
       <section id="cart">
-        <h3>cart</h3>
-      <section id="cart-list">empty</section>
+        <h3>CART</h3>
+      <section id="cart-list">EMPTY</section>
       <section id="total-price">total price: <span>0</span></section>
       </section>
     </main>
